# CAELUS

./: .gitignore  CAELUS_CALISTIR.bat  CMakeLists.txt  Cargo.toml  README.md  build.bat  build.sh  caelus_identity.key  ci.bat  ci.sh  core_engine.cpp
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml  release.yml
apps/caelus-ncm-mobile/: README.md  package-lock.json  package.json  tsconfig.ui.json
apps/caelus-ncm-mobile/.openai/: hosting.json
apps/caelus-ncm-mobile/app/: globals.css  layout.tsx  page.tsx
apps/caelus-ncm-mobile/lib/: caelus-wasm.ts  evidence-vault.d.mts  evidence-vault.mjs  neuro-weights.mjs  neurocausal.d.mts  neurocausal.d.ts  neurocausal.mjs  open-source-connectors.d.mts  open-source-connectors.mjs  xlsx-guard.d.mts  xlsx-guard.mjs
apps/caelus-ncm-mobile/public/: caelus_wasm.wasm  manifest.webmanifest  sw.js
apps/caelus-ncm-mobile/scripts/: build-verified.sh  (+1 more)
build_cmake/: CMakeCache.txt
caelus_core/: Cargo.toml
caelus_core/src/: det_rng.rs  engine.rs  fp.rs  lib.rs  neural_contract.rs  neural_gate.rs  neural_hash.rs  neural_runtime.rs
caelus_core/tests/: invariant_sweep.rs  narrowed_model.rs
caelus_core/verify/: fp_proofs.rs  latch_machine.rs  mul_div_safety.rs
caelus_ml/: README.md  generate_dataset.py  requirements-training.txt  test_pipeline.py  train_v1.py
caelus_wasm/: Cargo.toml
caelus_wasm/src/: lib.rs
docs/: ANAHTAR_TORENI_2026-07-02.md  BS_EXEC_GOLDEN_MATRIX.md  BS_EXEC_REPL_KILAVUZU.md  CAELUS_DCE_HARDENING_DIFF_BY_FILE.docx  CAELUS_DCE_HARDENING_DIFF_BY_FILE.md  CAELUS_DCE_HARDENING_RAPORU.docx  CAELUS_DCE_HARDENING_RAPORU.md  CAELUS_MOBILE_ARCHITECTURE.md  CAELUS_MOBILE_MIGRATION_REPORT.md  CAELUS_PROJE_RAPORU.md  FIZIBILITE_ISPAT_VE_GOMULU.md  GELISTIRME_RAPORU.md  GELISTIRME_RAPORU_v2.md  GELISTIRME_RAPORU_v3.md  GELISTIRME_RAPORU_v4.md  GELISTIRME_RAPORU_v5.md  GERCEK_DUNYA_GECIS_RAPORU.md  INTEL_IMZA_SOZLESMESI.md  NEURO_SYMBOLIC_IMPLEMENTATION_NOTES.md  PALANTIR_DCE_DEMO.md  UI_MODERNIZASYON_RAPORU.md
include/: audit_log.h  caelus_logger.h  causal_engine.h  det_rng.h  neural_contract.h  neural_gate.h  neural_hash.h  neural_host.h  neural_model.h  neural_runtime.h  neural_tick_runner.h  scenario_pack.h  ui_payload.h  ws_emitter.h
include/mobile/: caelus_mobile.h
include/plugin/: caelus_connector.h  caelus_plugin_abi.h  caelus_plugin_registry.h  caelus_reporter.h  caelus_solver.h
models/assurance_v1/: MODEL_CARD.md  manifest.json  model.sig  training_manifest.json  training_metrics.json
scenarios/: BS-01_SAHTE_UFUK.json  BS-02_GOLGE_ARSIV.json  BS-03_KUM_SAATI.json
src/: audit_log.rs  intel_core.cpp  intel_core.h  lib.rs  model_verify.rs  scenario_verify.rs
src/mobile/: caelus_mobile_bridge.cpp
src/network/: discovery.rs  mesh_auth.rs  mod.rs
tests/: connector_smoke.py  doctest.h  make_negative_scenario.py  neural_cpp_reference.cpp  run_bs01_neural_demo.py  run_bs_exec_golden.bat  run_bs_exec_golden.py  run_neural_differential.py  run_neural_toolchain_smoke.py  run_security_negative.py  test_caelus_blake3.py  test_causal_engine.cpp  test_mobile_bridge.cpp  test_neural_war_room_contract.py  test_pure_blake3.py  test_verify_audit_neural.py  universal_scenario_compiler.test.mjs  universal_wasm_scenario.test.mjs
tests/golden/: bs01_expected.json  bs01_repl.commands  bs02_expected.json  bs02_repl.commands  bs03_expected.json  bs03_repl.commands  neural_v1_differential.json
tests/neural_reference/: Cargo.toml  build.rs
tests/neural_reference/src/: main.rs
tools/: build_host_bridge.sh  build_ios_core.sh  build_standalone.py  caelus_blake3.py  caelus_neural_trusted_pubkey.txt  caelus_signing.key  caelus_trusted_pubkey.txt  pure_blake3.py  purge_git_history.sh  sign_intel_payload.py  verify_audit_log.py
ui/: app.js  index.html  scenario_compiler.js
(+28 files in other folders)
